--- a/it-tools/docker-compose.yaml
+++ b/it-tools/docker-compose.yaml
@@ -6,5 +6,11 @@ services:
     restart: unless-stopped
     ports:
       - 8082:80
+    networks:
+      - proxy
     environment:
       - TZ=Asia/Bangkok
+
+networks:
+  proxy:
+    external: true
